# RM_selfdefine_client

./: .gitignore  README.md  build-real-log.txt  index.html  package-lock.json  package.json  run-real-decoder.bat  run-real-decoder.fixed.bat  setup-ffmpeg-sys-next-vendor-v2.bat  setup-ffmpeg-sys-next-vendor.bat
scripts/: send_h264_custom_block.py  send_hevc_udp.py
scripts/fixtures/: input_custombyteblock_100k_annexb.h264  input_custombyteblock_annexb.h264
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  Cargo.toml.before_vendor_setup.bak  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  mqtt.rs  video.rs
src-tauri/src/mqtt/: client.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/video/: custom_block_reassembler.rs  custom_block_receiver.rs  decoder.rs  frame_hub.rs  mock_sender.rs  mod.rs  reassembler.rs  source.rs  udp_receiver.rs
src/components/: CrosshairPanel.vue  DebugPanel.vue  FloatingActionDock.vue  HudEditorOverlay.vue  HudEditorPanel.vue  InputDiagnosticsPanel.vue  ModeBadge.vue  ModeQuickSwitch.vue  RmBottomShortcutBar.vue  RmCrosshairHud.vue  RmHudPanel.vue  RmLeftInfoRail.vue  RmLinkMonitor.vue  RmQuickActionPanel.vue  RmStatusPill.vue  RmTopStatusBar.vue  TacticalBottomBar.vue  TacticalTopBar.vue  VideoCanvas.vue
src/composables/: useLowLatencyInput.ts  useModeSync.ts  useUiPersistence.ts  useVideoStream.ts
src/constants/: robotClients.ts
src/pages/: HeroDeployPage.vue
src/router/: index.ts
src/services/: inputBridge.ts  mqttBridge.ts  stream.ts  (+1 more)
(+13 files in other folders)
