[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
ffmpeg-next = { version = "=8.1.0", optional = true, default-features = false, features = [
  "codec",
  "device",
  "filter",
  "format",
  "software-resampling",
  "software-scaling"
] }
log = "0.4"

[features]
default = []
stub-decoder = []
real-decoder = ["dep:ffmpeg-next"]
